fix misalign category name on advanced search screen

--- a/app/stylesheets/v2/forms.less
+++ b/app/stylesheets/v2/forms.less
@@ -560,7 +560,7 @@ div.counter .over { color:red }
 }
 
 .fh-form.advanced div.collection {
-    margin:0 0 0 165px;
+    margin:0 0 0 175px;
 }
 
 .fh-form.advanced span.item {
